--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Web</title>
 </head>
-<body>
+<body style="font-family: 'Arial Black', Gadget, sans-serif;">
     <header>
-        <h1> Hello! </h1>
+        <h1 style="text-align: center;">Hello!</h1>
     </header>
 </body>
 </html>
