--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="font-family: 'Arial Black', Gadget, sans-serif;">
     <header>
-        <h1 style="text-align: center;">Hello!</h1>
+        <h1 style="text-align: center; font-weight: bold;">Hello!</h1>
     </header>
 </body>
 </html>
