--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Web</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body style="font-family: 'Arial Black', Gadget, sans-serif;">
     <header>
-        <h1 style="text-align: center; font-weight: bold;">Hello!</h1>
+        <h1 class="sb">Hello!</h1>
     </header>
 </body>
 </html>
