--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <title>Test Web</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<body style="font-family: 'Arial Black', Gadget, sans-serif;">
+<body>
     <header>
+        <div class="menu-btn" id="menuBtn">
+            <div class="menu-btn__burger"></div>
+        </div>
         <h1 class="sb">Hello!</h1>
     </header>
+    <nav class="nav" id="nav">
+        <ul class="nav__list">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <script src="hbm.js"></script>
 </body>
 </html>
