--- a/index.html
+++ b/index.html
@@ -3,24 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Web</title>
-    <link rel="stylesheet" href="main.css">
+    <title>Basic Website</title>
 </head>
-<body>
-    <header>
-        <div class="menu-btn" id="menuBtn">
-            <div class="menu-btn__burger"></div>
-        </div>
-        <h1 class="sb">Hello!</h1>
+<body style="margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif;">
+    <header style="position: -webkit-sticky; position: sticky; top: 0; background-color: #333; color: #fff; padding: 20px 0; text-align: center;">
+        <h1 style="margin: 0; font-size: 2em; font-weight: bold;">Hello!</h1>
     </header>
-    <nav class="nav" id="nav">
-        <ul class="nav__list">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-    <script src="hbm.js"></script>
+    <main style="padding: 20px;">
+        <p>Scroll down to see the sticky header in action.</p>
+        <div style="height: 2000px;"></div> <!-- To demonstrate the sticky effect -->
+    </main>
 </body>
 </html>
