--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Website</title>
 </head>
 <body style="margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif;">
-    <header style="position: -webkit-sticky; position: sticky; top: 0; background-color: #333; color: #fff; padding: 10px 0; text-align: center;">
+    <header style="position: -webkit-sticky; position: sticky; top: 0; background-color: #333; color: #fff; padding: 10px 0; text-align: center; display: flex; justify-content: center; align-items: center;">
         <h1 style="margin: 0; font-size: 2em; font-weight: bold;">Hello!</h1>
         <div class="menu-btn" style="position: absolute; top: 10px; right: 10px; width: 30px; height: 25px; cursor: pointer; display: flex; align-items: center; justify-content: center;">
-            <div class="menu-btn__burger" style="width: 30px; height: 3px; background-color: #fff; position: relative;">
-                <div style="position: absolute; top: -8px; width: 30px; height: 3px; background-color: #fff;"></div>
-                <div style="position: absolute; top: 8px; width: 30px; height: 3px; background-color: #fff;"></div>
+            <div class="menu-btn__burger" style="width: 30px; height: 2px; background-color: #fff; position: relative;">
+                <div style="position: absolute; top: -6px; width: 30px; height: 2px; background-color: #fff;"></div>
+                <div style="position: absolute; top: 6px; width: 30px; height: 2px; background-color: #fff;"></div>
             </div>
         </div>
     </header>
