--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Basic Website</title>
 </head>
 <body style="margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif;">
-    <header style="position: -webkit-sticky; position: sticky; top: 0; background-color: #333; color: #fff; padding: 10px 0; text-align: center;">
-        <img src="SF3D.svg" alt="SF3D Logo" style="width: 100px; height: auto;"/>
+    <header style="position: -webkit-sticky; position: sticky; top: 0; background-color: transparent; color: #fff; padding: 10px 0; text-align: center;">
+        <img src="SF3D.svg" alt="SF3D Logo" style="width: 50px; height: auto;"/>
     </header>
     <main style="padding: 20px;">
         <p>Welcome to the website! The header stays at the top as you scroll.</p>
