--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Website</title>
 </head>
-<body style="margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif;">
-    <header style="position: -webkit-sticky; position: sticky; top: 0; background-color: transparent; color: #fff; padding: 10px 0; text-align: center;">
-        <img src="SF3D.svg" alt="SF3D Logo" style="width: 50px; height: auto;"/>
+<body style="margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; background-color: #1D1C2B; color: #fff;">
+    <header style="position: -webkit-sticky; position: sticky; top: 0; background-color: transparent; padding: 10px 0; text-align: center;">
+        <img src="SF3D.svg" alt="SF3D Logo" style="width: 65px; height: auto;">
     </header>
     <main style="padding: 20px;">
         <p>Welcome to the website! The header stays at the top as you scroll.</p>
