--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Basic Website</title>
 </head>
 <body style="margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; background-color: #1D1C2B; color: #fff;">
-    <header style="position: -webkit-sticky; position: sticky; top: 0; background-color: transparent; padding: 10px 0; text-align: center;">
+    <header style="position: -webkit-sticky; position: sticky; top: 0; background-color: transparent; padding: 10px 0; display: flex; justify-content: space-between; align-items: center;">
         <img src="SF3D.svg" alt="SF3D Logo" style="width: 65px; height: auto;">
+        <div class="menu-btn" style="margin-right: 10px; width: 30px; height: 25px; cursor: pointer; display: flex; flex-direction: column; justify-content: space-between;">
+            <div style="width: 30px; height: 2px; background-color: rgba(253, 253, 253, 0.8);"></div>
+            <div style="width: 30px; height: 2px; background-color: rgba(253, 253, 253, 0.8);"></div>
+            <div style="width: 30px; height: 2px; background-color: rgba(253, 253, 253, 0.8);"></div>
+        </div>
     </header>
     <main style="padding: 20px;">
         <p>Welcome to the website! The header stays at the top as you scroll.</p>
