--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Website</title>
+    <title>SF3D</title>
 </head>
 <body style="margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; background-color: #1D1C2B; color: #fff;">
     <header style="position: -webkit-sticky; position: sticky; top: 0; background-color: transparent; padding: 10px 0; display: flex; align-items: center; justify-content: center;">
