--- a/index.html
+++ b/index.html
@@ -4,18 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SF3D</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+            background-color: #1D1C2B;
+            color: #fff;
+        }
+
+        header {
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0;
+            background-color: transparent;
+            padding: 10px 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .menu-btn {
+            position: absolute;
+            left: 15px;
+            width: 24px;
+            height: 18px;
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .menu-btn div {
+            width: 24px;
+            height: 2px;
+            background-color: rgba(253, 253, 253, 0.8);
+            border-radius: 3px;
+            transition: all 0.3s ease;
+        }
+
+        .menu-btn div:nth-child(2) {
+            margin-top: 3px;
+            margin-bottom: 3px;
+        }
+
+        .menu-btn.open div:nth-child(1) {
+            transform: rotate(45deg) translate(4px, 4px);
+        }
+
+        .menu-btn.open div:nth-child(2) {
+            opacity: 0;
+        }
+
+        .menu-btn.open div:nth-child(3) {
+            transform: rotate(-45deg) translate(4px, -4px);
+        }
+
+        .App-logo {
+            width: 67.5px;
+            height: auto;
+        }
+
+        main {
+            padding: 20px;
+        }
+    </style>
 </head>
-<body style="margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; background-color: #1D1C2B; color: #fff;">
-    <header style="position: -webkit-sticky; position: sticky; top: 0; background-color: transparent; padding: 10px 0; display: flex; align-items: center; justify-content: center;">
-        <div class="menu-btn" style="position: absolute; left: 15px; width: 24px; height: 18px; cursor: pointer; display: flex; flex-direction: column; justify-content: space-between; align-items: center;">
-            <div style="width: 24px; height: 2px; background-color: rgba(253, 253, 253, 0.8); border-radius: 3px;"></div>
-            <div style="width: 24px; height: 2px; background-color: rgba(253, 253, 253, 0.8); border-radius: 3px; margin-top: 3px;"></div>
-            <div style="width: 24px; height: 2px; background-color: rgba(253, 253, 253, 0.8); border-radius: 3px; margin-top: 3px;"></div>
+<body>
+    <header>
+        <div class="menu-btn" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
-        <img src="SF3D.svg" alt="SF3D Logo" style="width: 67.5px; height: auto;">
+        <img src="SF3D.svg" alt="SF3D Logo" class="App-logo">
     </header>
-    <main style="padding: 20px;">
+    <main>
         <p>Welcome to the website! The header stays at the top as you scroll.</p>
     </main>
+    <script>
+        function toggleMenu() {
+            document.querySelector('.menu-btn').classList.toggle('open');
+        }
+    </script>
 </body>
 </html>
