--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         }
 
         .menu-btn.open div:nth-child(1) {
-            transform: rotate(45deg) translateY(6px);
+            transform: rotate(45deg) translate(2px, 2px);
         }
 
         .menu-btn.open div:nth-child(2) {
@@ -60,7 +60,7 @@
         }
 
         .menu-btn.open div:nth-child(3) {
-            transform: rotate(-45deg) translateY(-6px);
+            transform: rotate(-45deg) translate(2px, -2px);
         }
 
         .App-logo {
@@ -73,4 +73,22 @@
         }
     </style>
 </head>
-<body
+<body>
+    <header>
+        <div class="menu-btn">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <img src="SF3D.svg" alt="SF3D Logo" class="App-logo">
+    </header>
+    <main>
+        <p>Welcome to the website! The header stays at the top as you scroll.</p>
+    </main>
+    <script>
+        window.onload = function() {
+            document.querySelector('.menu-btn').classList.add('open');
+        };
+    </script>
+</body>
+</html>
