--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         }
 
         .menu-btn.open div:nth-child(1) {
-            transform: rotate(45deg) translate(4.35px, 4.35px);
+            transform: rotate(45deg);
         }
 
         .menu-btn.open div:nth-child(2) {
@@ -59,7 +59,7 @@
         }
 
         .menu-btn.open div:nth-child(3) {
-            transform: rotate(-45deg) translate(4.35px, -4.35px);
+            transform: rotate(-45deg);
         }
 
         .App-logo {
