--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
             margin-bottom: 3px;
         }
 
+        .menu-btn.open div:nth-child(1),
+        .menu-btn.open div:nth-child(3) {
+            width: 26px; /* Extend width */
+        }
+
         .menu-btn.open div:nth-child(1) {
             transform: rotate(45deg) translate(5px, 5px);
         }
