--- a/index.html
+++ b/index.html
@@ -50,13 +50,8 @@
             margin-bottom: 3px;
         }
 
-        .menu-btn.open div:nth-child(1),
-        .menu-btn.open div:nth-child(3) {
-            width: 26px; /* Extend width */
-        }
-
         .menu-btn.open div:nth-child(1) {
-            transform: rotate(45deg) translate(5px, 5px);
+            transform: rotate(45deg) translate(0, 6px);
         }
 
         .menu-btn.open div:nth-child(2) {
@@ -64,7 +59,7 @@
         }
 
         .menu-btn.open div:nth-child(3) {
-            transform: rotate(-45deg) translate(5px, -5px);
+            transform: rotate(-45deg) translate(0, -6px);
         }
 
         .App-logo {
