--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             background-color: #FDFDFD;
             border-radius: 3px;
             transition: all 0.3s ease;
+            transform-origin: center; /* Pivot from center */
         }
 
         .menu-btn div:nth-child(2) {
