--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             left: -100%; /* Initially hidden off-screen */
             width: 100%;
             height: 100%;
-            background-color: rgba(29, 28, 43, 0.95);
+            background-color: rgba(29, 28, 43, 0.95); /* Semi-transparent */
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -72,6 +72,15 @@
             font-size: 24px;
             text-decoration: none;
             margin: 15px 0;
+        }
+
+        .menu .close-btn {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            cursor: pointer;
+            font-size: 24px;
+            color: #FDFDFD; /* Same color as the hamburger menu */
         }
 
         .App-logo {
@@ -97,6 +106,7 @@
         <p>Welcome to the SF3D website! The header stays at the top as you scroll.</p>
     </main>
     <div class="menu" id="menu">
+        <div class="close-btn" onclick="toggleMenu()">✕</div>
         <a href="#landing">Landing</a>
         <a href="#shop">Shop</a>
         <a href="#news">News</a>
