--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             padding: 10px 0;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: space-between;
             z-index: 1000; /* Ensure header is always on top */
+            padding-left: 15px;
+            padding-right: 15px;
         }
 
         .menu-btn {
-            position: absolute;
-            left: 15px;
             width: 24px;
             height: 18px;
             cursor: pointer;
@@ -36,7 +36,6 @@
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            z-index: 1001; /* Ensure button is above the menu */
         }
 
         .menu-btn div {
@@ -76,7 +75,7 @@
             justify-content: center;
             align-items: center;
             transition: left 0.3s ease;
-            z-index: 1000; /* Below header and button */
+            z-index: 999; /* Below header */
         }
 
         .menu.open {
@@ -102,18 +101,17 @@
 </head>
 <body>
     <header>
+        <img src="SF3D.svg" alt="SF3D Logo" class="App-logo">
         <div class="menu-btn" onclick="toggleMenu()">
             <div></div>
             <div></div>
             <div></div>
         </div>
-        <img src="SF3D.svg" alt="SF3D Logo" class="App-logo">
     </header>
     <main>
         <p>Welcome to the SF3D website! The header stays at the top as you scroll.</p>
     </main>
     <div class="menu" id="menu">
-        <div class="menu-btn" onclick="toggleMenu()">✕</div>
         <a href="#landing">Landing</a>
         <a href="#shop">Shop</a>
         <a href="#news">News</a>
