--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
             top: 0;
             width: 100%;
             background-color: rgba(29, 28, 43, 0.95);
-            padding: 10px 0;
+            padding: 10px 20px;
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center;
             z-index: 1000; /* Ensure header is always on top */
-            padding-left: 15px;
-            padding-right: 15px;
         }
 
         .menu-btn {
+            position: absolute;
+            top: 15px;
+            left: 15px;
             width: 24px;
             height: 18px;
             cursor: pointer;
@@ -44,6 +45,7 @@
             background-color: #FDFDFD;
             border-radius: 3px;
             transition: all 0.3s ease;
+            transform-origin: center; /* Set pivot point to center */
         }
 
         .menu-btn div:nth-child(2) {
@@ -52,7 +54,7 @@
         }
 
         .menu-btn.open div:nth-child(1) {
-            transform: rotate(45deg) translate(5px, 5px);
+            transform: rotate(45deg) translate(0, 7.8px);
         }
 
         .menu-btn.open div:nth-child(2) {
@@ -60,7 +62,7 @@
         }
 
         .menu-btn.open div:nth-child(3) {
-            transform: rotate(-45deg) translate(5px, -5px);
+            transform: rotate(-45deg) translate(0, -7.8px);
         }
 
         .menu {
@@ -92,6 +94,10 @@
         .App-logo {
             width: 67.5px;
             height: auto;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
 
         main {
