--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
 
         .menu-btn.open div:nth-child(1) {
-            transform: rotate(45deg) translate(0, 7.8px);
+            transform: translate(0, 7.8px) rotate(45deg);
         }
 
         .menu-btn.open div:nth-child(2) {
@@ -62,7 +62,7 @@
         }
 
         .menu-btn.open div:nth-child(3) {
-            transform: rotate(-45deg) translate(0, -7.8px);
+            transform: translate(0, -7.8px) rotate(-45deg);
         }
 
         .menu {
