--- a/index.html
+++ b/index.html
@@ -94,10 +94,7 @@
         .App-logo {
             width: 67.5px;
             height: auto;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            margin: auto; /* Center the logo */
         }
 
         main {
@@ -132,3 +129,4 @@
     </script>
 </body>
 </html>
+
