--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             margin: 0;
             padding: 0;
+            padding-top: 20px; /* Add padding to top */
             box-sizing: border-box;
             font-family: Arial, sans-serif;
             background-color: #1D1C2B;
