--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         body {
             margin: 0;
             padding: 0;
-            padding-top: 20px; /* Add padding to top */
             box-sizing: border-box;
             font-family: Arial, sans-serif;
             background-color: #1D1C2B;
@@ -96,9 +95,7 @@
         .App-logo {
             width: 67.5px;
             height: auto;
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%); /* Center horizontally */
+            margin: auto; /* Center the logo */
         }
 
         main {
