--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         .App-logo {
             width: 67.5px;
             height: auto;
-            margin: auto; /* Center the logo */
+            margin: 0 auto; /* Center the logo horizontally */
         }
 
         main {
