--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             padding: 10px 20px;
             display: flex;
             align-items: center;
-            justify-content: space-between; /* Change to space-between */
+            justify-content: space-between;
             z-index: 1000; /* Ensure header is always on top */
         }
 
@@ -90,8 +90,8 @@
 
         .logo-container {
             display: flex;
-            justify-content: center; /* Center the logo horizontally */
-            width: 100%;
+            justify-content: center;
+            flex: 1;
         }
 
         .App-logo {
@@ -101,6 +101,18 @@
 
         main {
             padding: 80px 20px 20px;
+        }
+
+        @media (max-width: 768px) {
+            .App-logo {
+                width: 50px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .App-logo {
+                width: 40px;
+            }
         }
     </style>
 </head>
