--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
             padding: 10px 20px;
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center;
             z-index: 1000; /* Ensure header is always on top */
         }
 
         .menu-btn {
+            position: absolute;
+            top: 50%;
+            left: 15px;
             width: 24px;
             height: 18px;
             cursor: pointer;
@@ -34,6 +37,7 @@
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
+            transform: translateY(-50%); /* Center vertically */
         }
 
         .menu-btn div {
@@ -42,7 +46,7 @@
             background-color: #FDFDFD;
             border-radius: 3px;
             transition: all 0.3s ease;
-            transform-origin: center;
+            transform-origin: center; /* Set pivot point to center */
         }
 
         .menu-btn div:nth-child(2) {
@@ -65,20 +69,20 @@
         .menu {
             position: fixed;
             top: 0;
-            left: -100%;
+            left: -100%; /* Initially hidden off-screen */
             width: 100%;
             height: 100%;
-            background-color: rgba(29, 28, 43, 0.95);
+            background-color: rgba(29, 28, 43, 0.95); /* Semi-transparent */
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             transition: left 0.3s ease;
-            z-index: 999;
+            z-index: 999; /* Below header */
         }
 
         .menu.open {
-            left: 0;
+            left: 0; /* Slide in */
         }
 
         .menu a {
@@ -88,31 +92,14 @@
             margin: 15px 0;
         }
 
-        .logo-container {
-            display: flex;
-            justify-content: center;
-            flex: 1;
-        }
-
         .App-logo {
             width: 67.5px;
             height: auto;
+            margin: 0 auto; /* Center the logo horizontally */
         }
 
         main {
-            padding: 80px 20px 20px;
-        }
-
-        @media (max-width: 768px) {
-            .App-logo {
-                width: 50px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .App-logo {
-                width: 40px;
-            }
+            padding: 80px 20px 20px; /* Added top padding to avoid header overlap */
         }
     </style>
 </head>
@@ -123,10 +110,7 @@
             <div></div>
             <div></div>
         </div>
-        <div class="logo-container">
-            <img src="SF3D.svg" alt="SF3D Logo" class="App-logo">
-        </div>
-        <div></div> <!-- Add an empty div to fill space -->
+        <img src="SF3D.svg" alt="SF3D Logo" class="App-logo">
     </header>
     <main>
         <p>Welcome to the SF3D website! The header stays at the top as you scroll.</p>
