--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             font-family: Arial, sans-serif;
             background-color: #1D1C2B;
             color: #fff;
+            position: relative;
         }
 
         header {
@@ -22,7 +23,6 @@
             padding: 10px 20px;
             display: flex;
             align-items: center;
-            justify-content: center;
             z-index: 1000;
         }
 
@@ -96,7 +96,7 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translateX(-50%);
             max-width: 100px; /* Adjust size as needed */
             max-height: 100px; /* Adjust size as needed */
         }
@@ -113,8 +113,8 @@
             <div></div>
             <div></div>
         </div>
-        <img src="sf3d.svg" alt="SF3D Logo" class="center-svg">
     </header>
+    <img src="sf3d.svg" alt="SF3D Logo" class="center-svg">
     <main>
         <p>Welcome to the SF3D website! The header stays at the top as you scroll.</p>
     </main>
