--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             padding: 10px 20px;
             display: flex;
             align-items: center;
-            z-index: 1000;
+            z-index: 1000; /* Ensure header is always on top */
         }
 
         .menu-btn {
@@ -37,7 +37,7 @@
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            transform: translateY(-50%);
+            transform: translateY(-50%); /* Center vertically */
         }
 
         .menu-btn div {
@@ -46,7 +46,7 @@
             background-color: #FDFDFD;
             border-radius: 3px;
             transition: all 0.3s ease;
-            transform-origin: center;
+            transform-origin: center; /* Set pivot point to center */
         }
 
         .menu-btn div:nth-child(2) {
@@ -69,20 +69,20 @@
         .menu {
             position: fixed;
             top: 0;
-            left: -100%;
+            left: -100%; /* Initially hidden off-screen */
             width: 100%;
             height: 100%;
-            background-color: rgba(29, 28, 43, 0.95);
+            background-color: rgba(29, 28, 43, 0.95); /* Semi-transparent */
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             transition: left 0.3s ease;
-            z-index: 999;
+            z-index: 999; /* Below header */
         }
 
         .menu.open {
-            left: 0;
+            left: 0; /* Slide in */
         }
 
         .menu a {
@@ -94,7 +94,6 @@
 
         .center-svg {
             position: absolute;
-            top: 50%;
             left: 50%;
             transform: translateX(-50%);
             max-width: 100px; /* Adjust size as needed */
@@ -102,7 +101,7 @@
         }
 
         main {
-            padding: 80px 20px 20px;
+            padding: 80px 20px 20px; /* Added top padding to avoid header overlap */
         }
     </style>
 </head>
@@ -113,8 +112,8 @@
             <div></div>
             <div></div>
         </div>
+        <img src="SF3D.svg" alt="SF3D Logo" class="center-svg">
     </header>
-    <img src="sf3d.svg" alt="SF3D Logo" class="center-svg">
     <main>
         <p>Welcome to the SF3D website! The header stays at the top as you scroll.</p>
     </main>
