--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
             font-family: Arial, sans-serif;
             background-color: #1D1C2B;
             color: #fff;
-            position: relative;
         }
 
         header {
             position: fixed;
-            top: 5px; /* Added padding from the top */
+            top: 0;
             width: 100%;
             background-color: rgba(29, 28, 43, 0.95);
-            padding: 10px 20px;
+            padding: 5px 20px 10px; /* Added padding from the top */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -114,7 +113,7 @@
             <div></div>
             <div></div>
         </div>
-        <img src="sf3d.svg" alt="SF3D Logo" class="center-svg">
+        <img src="SF3D.svg" alt="SF3D Logo" class="center-svg">
     </header>
     <main>
         <p>Welcome to the SF3D website! The header stays at the top as you scroll.</p>
