--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
         header {
             position: fixed;
-            top: 0;
+            top: 20px; /* Added padding from the top */
             width: 100%;
             background-color: rgba(29, 28, 43, 0.95);
-            padding: 5px 20px 10px; /* Added padding from the top */
+            padding: 10px 20px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -102,7 +102,7 @@
         }
 
         main {
-            padding: 80px 20px 20px; /* Added top padding to avoid header overlap */
+            padding: 100px 20px 20px; /* Added top padding to avoid header overlap */
         }
     </style>
 </head>
