--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             position: fixed;
             top: 20px; /* Added padding from the top */
             width: 100%;
-            background-color: rgba(29, 28, 43, 0.95);
-            padding: 10px 20px;
+            padding: 20px 20px; /* Increased padding for a bigger header */
             display: flex;
             align-items: center;
             justify-content: center;
             z-index: 1000; /* Ensure header is always on top */
+            background: none; /* Make background invisible */
         }
 
         .menu-btn {
@@ -97,12 +97,12 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            max-width: 100px; /* Adjust size as needed */
-            max-height: 100px; /* Adjust size as needed */
+            max-width: 150px; /* Adjust size as needed */
+            max-height: 150px; /* Adjust size as needed */
         }
 
         main {
-            padding: 100px 20px 20px; /* Added top padding to avoid header overlap */
+            padding: 120px 20px 20px; /* Adjusted top padding to avoid header overlap */
         }
     </style>
 </head>
