--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            max-width: 150px; /* Adjust size as needed */
-            max-height: 150px; /* Adjust size as needed */
+            width: 110px; /* Fixed size */
+            height: 110px; /* Fixed size */
         }
 
         main {
