--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SF3D - Landing</title>
+    <link rel="icon" href="/resources/SF3D.svg" type="image/x-icon">
+
+    <script src="js/hamburgermenu.js" defer></script>
     <style>
         body {
             margin: 0;
@@ -116,20 +120,16 @@
         <img src="SF3D.svg" alt="SF3D Logo" class="center-svg">
     </header>
     <main>
-        <p>Welcome to the SF3D website! The header stays at the top as you scroll.</p>
+        
     </main>
+    
     <div class="menu" id="menu">
-        <a href="#landing">Landing</a>
-        <a href="#shop">Shop</a>
-        <a href="#news">News</a>
-        <a href="#about">About Us</a>
-        <a href="#contact">Contact Us</a>
+        <a href="landing.html">Landing</a>
+        <a href="/html/shop.html">Shop</a>
+        <a href="/html/news.html">News</a>
+        <a href="/html/about.html">About Us</a>
+        <a href="/html/contact.html">Contact Us</a>
     </div>
     <script>
-        function toggleMenu() {
-            document.querySelector('.menu-btn').classList.toggle('open');
-            document.getElementById('menu').classList.toggle('open');
-        }
-    </script>
 </body>
-</html>
+    </html>
