--- a/index.html
+++ b/index.html
@@ -1,135 +1,34 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SF3D - Landing</title>
-    <link rel="icon" href="/resources/SF3D.svg" type="image/x-icon">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SF3D - Landing</title>
+        <link rel="icon" href="/resources/SF3D.svg" type="image/x-icon">
 
-    <script src="js/hamburgermenu.js" defer></script>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-            background-color: #1D1C2B;
-            color: #fff;
-        }
-
-        header {
-            position: fixed;
-            top: 20px; /* Added padding from the top */
-            width: 100%;
-            padding: 20px 20px; /* Increased padding for a bigger header */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 1000; /* Ensure header is always on top */
-            background: none; /* Make background invisible */
-        }
-
-        .menu-btn {
-            position: absolute;
-            top: 50%;
-            left: 15px;
-            width: 24px;
-            height: 18px;
-            cursor: pointer;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            transform: translateY(-50%); /* Center vertically */
-        }
-
-        .menu-btn div {
-            width: 24px;
-            height: 2px;
-            background-color: #FDFDFD;
-            border-radius: 3px;
-            transition: all 0.3s ease;
-            transform-origin: center; /* Set pivot point to center */
-        }
-
-        .menu-btn div:nth-child(2) {
-            margin-top: 3px;
-            margin-bottom: 3px;
-        }
-
-        .menu-btn.open div:nth-child(1) {
-            transform: translate(0, 7.8px) rotate(45deg);
-        }
-
-        .menu-btn.open div:nth-child(2) {
-            opacity: 0;
-        }
-
-        .menu-btn.open div:nth-child(3) {
-            transform: translate(0, -7.8px) rotate(-45deg);
-        }
-
-        .menu {
-            position: fixed;
-            top: 0;
-            left: -100%; /* Initially hidden off-screen */
-            width: 100%;
-            height: 100%;
-            background-color: rgba(29, 28, 43, 0.95); /* Semi-transparent */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            transition: left 0.3s ease;
-            z-index: 999; /* Below header */
-        }
-
-        .menu.open {
-            left: 0; /* Slide in */
-        }
-
-        .menu a {
-            color: #FDFDFD;
-            font-size: 24px;
-            text-decoration: none;
-            margin: 15px 0;
-        }
-
-        .center-svg {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 95px; /* Fixed size */
-            height: 95px; /* Fixed size */
-        }
-
-        main {
-            padding: 120px 20px 20px; /* Adjusted top padding to avoid header overlap */
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <div class="menu-btn" onclick="toggleMenu()">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <img src="SF3D.svg" alt="SF3D Logo" class="center-svg">
-    </header>
-    <main>
+        <link rel="stylesheet" href="css/main.css">
+        <script src="js/hamburgermenu.js" defer></script>
+    </head>
+    <body>
+        <header>
+            <div class="menu-btn" onclick="toggleMenu()">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <img src="resources/SF3D.svg" alt="SF3D Logo" class="center-svg">
+        </header>
+        <main>
         
-    </main>
+        </main>
     
-    <div class="menu" id="menu">
-        <a href="landing.html">Landing</a>
-        <a href="/html/shop.html">Shop</a>
-        <a href="/html/news.html">News</a>
-        <a href="/html/about.html">About Us</a>
-        <a href="/html/contact.html">Contact Us</a>
-    </div>
-    <script>
-</body>
-    </html>
+        <div class="menu" id="menu">
+            <a href="landing.html">Landing</a>
+            <a href="/html/shop.html">Shop</a>
+            <a href="/html/news.html">News</a>
+            <a href="/html/about.html">About Us</a>
+            <a href="/html/contact.html">Contact Us</a>
+        </div>
+    </body>
+</html>
