--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-            <div class="bt" class="menu-btn" onclick="toggleMenu()">
+            <div class="menu-btn" onclick="toggleMenu()">
                 <div></div>
                 <div></div>
                 <div></div>
