--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>SF3D - Landing</title>
         <link rel="icon" href="/resources/SF3D.svg" type="image/x-icon">
         
-        <link rel="stylesheet" href="css/masque.cas">
+        <link rel="stylesheet" href="css/marquee.cas">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/hamburgermenu.js" defer></script>
     </head>
@@ -20,7 +20,7 @@
             <img src="resources/SF3D.svg" alt="SF3D Logo" class="center-svg">
         </header>
         <main>
-            <span class="marque">Everything is atleast 10% off!</span>
+            <span class="marquee">Everything is atleast 10% off!</span>
         </main>
     
         <div class="menu" id="menu">
