--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>SF3D - Landing</title>
         <link rel="icon" href="/resources/SF3D.svg" type="image/x-icon">
         
-        <link rel="stylesheet" href="css/marquee.cas">
+        <link rel="stylesheet" href="css/marquee.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/hamburgermenu.js" defer></script>
     </head>
