--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <img src="resources/SF3D.svg" alt="SF3D Logo" class="center-svg">
         </header>
         <main>
-            <span class="marquee">Everything is atleast 10% off!</span>
+            <div class="marquee">
+                <span>Everything is atleast 10% off!</span>
+            </div>
         </main>
     
         <div class="menu" id="menu">
