--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
         <main>
             <div class="marquee">
-                <span>Everything is atleast 10% off!</span>
+                <span style="font-size: 30px;" class="bt">Everything is atleast 10% off!</span>
             </div>
         </main>
     
