--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </main>
     
         <div class="menu" id="menu">
-            <a href="landing.html">Landing</a>
+            <a href="index.html">Landing</a>
             <a href="/html/shop.html">Shop</a>
             <a href="/html/news.html">News</a>
             <a href="/html/about.html">About Us</a>
