--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <div class="marquee">
                 <span style="font-size: 35px;" class="bt">Everything is atleast 10% off!</span>
             </div>
+            <br>
+            <canvas id="canvas"></canvas> <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> <script src="https://threejs.org/examples/js/loaders/GLTFLoader.js"></script> <script> let scene, camera, renderer, model; function init() { // Create scene scene = new THREE.Scene(); // Create camera camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000); camera.position.z = 5; // Create renderer renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('canvas') }); renderer.setSize(window.innerWidth, window.innerHeight); document.body.appendChild(renderer.domElement); // Load the model const loader = new THREE.GLTFLoader(); loader.load('/resources/amonguskeycap.stl', function(gltf) { model = gltf.scene; scene.add(model); animate(); }, undefined, function(error) { console.error(error); }); window.addEventListener('resize', onWindowResize, false); document.addEventListener('mousemove', onDocumentMouseMove, false); } function onWindowResize() { camera.aspect = window.innerWidth / window.innerHeight; camera.updateProjectionMatrix(); renderer.setSize(window.innerWidth, window.innerHeight); } function onDocumentMouseMove(event) { if (model) { model.rotation.y = (event.clientX / window.innerWidth) * 2 * Math.PI; model.rotation.x = (event.clientY / window.innerHeight) * 2 * Math.PI; } } function animate() { requestAnimationFrame(animate); renderer.render(scene, camera); } init(); </script>
         </main>
     
         <div class="menu" id="menu">
