--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <model-viewer src="/resources/avacado.gltf.txt" alt="A 3D model of an Among Us keycap" camera-controls></model-viewer>
+    <model-viewer src="/resources/avacodo.gltf.txt" alt="A 3D model of an Among Us keycap" camera-controls></model-viewer>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </body>
 </html>
