--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         
     </main>
     <div class="menu" id="menu">
-        <a href="index.html">Landing</a>
-        <a href="/html/shop.html">Shop</a>
-        <a href="/html/news.html">News</a>
-        <a href="/html/about.html">About Us</a>
-        <a href="/html/contact.html">Contact Us</a>
+        <a href="../index.html">Landing</a>
+        <a href="../html/shop.html">Shop</a>
+        <a href="../html/news.html">News</a>
+        <a href="../html/about.html">About Us</a>
+        <a href="../html/contact.html">Contact Us</a>
     </div>
 </body>
 </html>
