--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SF3D - Landing</title>
-    <link rel="icon" href="/resources/SF3D.svg" type="image/x-icon">
+    <title>LT3D - Landing</title>
+    <link rel="icon" href="/resources/LT3D.svg" type="image/x-icon">
     
     <link rel="stylesheet" href="css/marquee.css">
     <link rel="stylesheet" href="css/main.css">
@@ -17,7 +17,7 @@
             <div></div>
             <div></div>
         </div>
-        <img src="resources/SF3D.svg" alt="SF3D Logo" class="center-svg">
+        <img src="resources/SF3D.svg" alt="LT3D" class="center-svg">
     </header>
     <main>
         <div class="marquee">
