--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div></div>
             <div></div>
         </div>
-        <img src="resources/SF3D.svg" alt="LT3D" class="center-svg">
+        <img src="resources/LT3D.svg" alt="LT3D" class="center-svg">
     </header>
     <main>
         <div class="marquee">
