--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <img src="resources/LT3D.svg" alt="LT3D" class="center-svg">
     </header>
     <main>
+        <h1 class="bt">We are LT3D!</h1>
+        <br>
         <div class="marquee">
             <span style="font-size: 35px;" class="bt">Everything is at least 10% off!</span>
         </div>
@@ -32,6 +34,7 @@
         <a href="../html/news.html">News</a>
         <a href="../html/about.html">About Us</a>
         <a href="../html/contact.html">Contact Us</a>
+        <a href="../html/legal.html">Legal</a>
     </div>
 </body>
 </html>
